k8s_manifests/go-ws/go-web-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-ws-deployment
  namespace: go-ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-ws
  template:
    metadata:
      labels:
        app: go-ws
    spec:
      containers:
      - name: go-ws
        image: aracki/go-web-server
        imagePullPolicy: Always
        ports:                                      
        - containerPort: 8080
          name: http
