k8s_manifests/go-ws/go-ws.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-ws-deployment
  namespace: go-ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-ws
  template:
    metadata:
      labels:
        app: go-ws
    spec:
      containers:
      - name: go-ws
        image: aracki/go-web-server
        imagePullPolicy: Always
        ports:                                      
        - containerPort: 8080
          name: http
        volumeMounts:
          - mountPath: /files
            name: files-volume
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 3
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
            - ls
            - /files
          periodSeconds: 5
        resources:
          limits:
            memory: "50Mi"
      volumes:
        - name: files-volume
          hostPath:
            path: /data
            type: Directory
