k8s_manifests/go-ws/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-ws-svc
  namespace: go-ws
spec:
  selector:
    app: go-ws
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
